--- a/login.html
+++ b/login.html
@@ -3,43 +3,33 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>延吉交通 - 登入頁</title>
+    <title>延吉交通 - 登入</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="./css/common.css" rel="stylesheet">
   </head>
   <body>
-    <style>
-      .page-container {
-        height: 100vh;
-        width: 100vw;
-        background-image: url(./img/grey-metallic-jeep-with-blue-stripe-it.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: 50%;
-      }
-      .modal {
-        background-color: rgba(0,0,0,0.1);
-      }
-    </style>
     <div class="page-container">
-      <div class="modal modal-signin  d-block py-5" tabindex="-1" role="dialog" id="modalSignin">
+      <div class="modal d-block py-5">
         <div class="modal-dialog" role="document">
-          <div class="modal-content rounded-4 shadow">
+          <div class="modal-content shadow">
             <div class="modal-header p-5 pb-4 border-bottom-0">
-              <h1 class="text-center fw-bold mb-1 w-100">延吉交通</h2>
+              <h1 class="text-center fw-bold mb-1 w-100">延吉交通</h1>
             </div>
             <div class="modal-body p-5 pt-0">
-              <form class="">
+              <form class="r-form">
                 <div class="form-floating mb-3">
-                  <input type="email" class="form-control rounded-3" id="floatingInput" placeholder="name@example.com">
-                  <label for="floatingInput">帳號(信箱)</label>
+                  <input type="email" class="form-control" id="email" placeholder="電子郵件">
+                  <label for="email">電子郵件</label>
                 </div>
                 <div class="form-floating mb-3">
-                  <input type="password" class="form-control rounded-3" id="floatingPassword" placeholder="Password">
+                  <input type="password" class="form-control " id="floatingPassword" placeholder="密碼">
                   <label for="floatingPassword">密碼</label>
                 </div>
                 <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary">登入</button>
-                <hr class="my-4">
-                <h2 class="fs-6 fw-bold mb-3 text-secondary">其他方式登入</h2>
+                <h2 class="fs-6 fw-bold m-3 text-secondary">其他方式登入</h2>
                 <button class="w-100 py-2 mb-2 btn btn-outline-success rounded-3 fw-bold">
                   Line
                 </button>
@@ -51,7 +41,7 @@
                 </button>
               </form>
               <hr class="my-4">
-              <h2 class="fs-6 fw-bold mb-3 text-secondary">第一次使用? <a href="#">註冊</a></h2>
+              <h2 class="fs-6 fw-bold mb-3 text-secondary">第一次使用? <a href="./signup.html">註冊</a></h2>
             </div>
           </div>
         </div>
