fix: adjust login style

--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
                   <label for="floatingPassword">密碼</label>
                 </div>
                 <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary">登入</button>
-                <h2 class="fs-6 fw-bold m-3 text-secondary">其他方式登入</h2>
+                <h2 class="fs-6 my-3 text-secondary">其他方式登入</h2>
                 <button class="w-100 py-2 mb-2 btn btn-outline-success rounded-3 fw-bold">
                   Line
                 </button>
@@ -41,7 +41,7 @@
                 </button>
               </form>
               <hr class="my-4">
-              <h2 class="fs-6 fw-bold mb-3 text-secondary">第一次使用? <a href="./signup.html">註冊</a></h2>
+              <h2 class="fs-6 mb-3 text-secondary">第一次使用? <a href="./signup.html">註冊</a></h2>
             </div>
           </div>
         </div>
